--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,45 @@
 {
-    "name": "dompdf/dompdf",
-    "type": "library",
-    "description": "DOMPDF is a CSS 2.1 compliant HTML to PDF converter",
-    "homepage": "https://github.com/dompdf/dompdf",
-    "license": "LGPL-2.1",
-    "authors": [
-        {
-            "name": "Fabien Ménager",
-            "email": "fabien.menager@gmail.com"
-        },
-        {
-            "name": "Brian Sweeney",
-            "email": "eclecticgeek@gmail.com"
-        },
-        {
-            "name": "Gabriel Bull",
-            "email": "me@gabrielbull.com"
-        }
-    ],
-    "autoload": {
-        "psr-4" : {
-            "Dompdf\\" : "src/"
-        },
-        "classmap" : ["lib/"]
-    },
-    "require": {
-        "php": ">=5.4.0",
-        "ext-dom": "*",
-        "ext-mbstring": "*",
-        "phenx/php-font-lib": "0.5.*",
-        "phenx/php-svg-lib": "0.3.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8|^5.5|^6.5",
-        "squizlabs/php_codesniffer": "2.*"
-    },
-    "suggest": {
-        "ext-gd": "Needed to process images",
-        "ext-imagick": "Improves image processing performance",
-        "ext-gmagick": "Improves image processing performance"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-develop": "0.7-dev"
-        }
+  "name":         "egulias/email-validator",
+  "description":  "A library for validating emails against several RFCs",
+  "homepage":     "https://github.com/egulias/EmailValidator",
+  "type":         "Library",
+  "keywords":     ["email", "validation", "validator", "emailvalidation", "emailvalidator"],
+  "license":      "MIT",
+  "authors": [
+    {"name": "Eduardo Gulias Davis"}
+  ],
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.1.x-dev"
     }
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/dominicsayers/isemail"
+    }
+  ],
+  "require":      {
+    "php": ">= 5.5",
+    "doctrine/lexer": "^1.0.1"
+  },
+  "require-dev" :   {
+    "satooshi/php-coveralls": "^1.0.1",
+    "phpunit/phpunit": "^4.8.35||^5.7||^6.0",
+    "symfony/phpunit-bridge": "^4.4@dev",
+    "dominicsayers/isemail": "dev-master"
+  },
+  "suggest": {
+    "ext-intl": "PHP Internationalization Libraries are required to use the SpoofChecking validation"
+  },
+  "autoload": {
+    "psr-4": {
+      "Egulias\\EmailValidator\\": "EmailValidator"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Egulias\\Tests\\": "test"
+    }
+  }
 }
