--- a/Cookie/composer.json
+++ b/Cookie/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "illuminate/contracts",
-    "description": "The Illuminate Contracts package.",
+    "name": "illuminate/cookie",
+    "description": "The Illuminate Cookie package.",
     "license": "MIT",
     "homepage": "https://laravel.com",
     "support": {
@@ -15,12 +15,14 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "psr/container": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "illuminate/contracts": "5.8.*",
+        "illuminate/support": "5.8.*",
+        "symfony/http-foundation": "^4.2",
+        "symfony/http-kernel": "^4.2"
     },
     "autoload": {
         "psr-4": {
-            "Illuminate\\Contracts\\": ""
+            "Illuminate\\Cookie\\": ""
         }
     },
     "extra": {
