--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
-    "name": "illuminate/contracts",
-    "description": "The Illuminate Contracts package.",
+    "name": "illuminate/database",
+    "description": "The Illuminate Database package.",
     "license": "MIT",
     "homepage": "https://laravel.com",
     "support": {
         "issues": "https://github.com/laravel/framework/issues",
         "source": "https://github.com/laravel/framework"
     },
+    "keywords": ["laravel", "database", "sql", "orm"],
     "authors": [
         {
             "name": "Taylor Otwell",
@@ -15,18 +16,28 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "psr/container": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "ext-json": "*",
+        "illuminate/container": "5.8.*",
+        "illuminate/contracts": "5.8.*",
+        "illuminate/support": "5.8.*"
     },
     "autoload": {
         "psr-4": {
-            "Illuminate\\Contracts\\": ""
+            "Illuminate\\Database\\": ""
         }
     },
     "extra": {
         "branch-alias": {
             "dev-master": "5.8-dev"
         }
+    },
+    "suggest": {
+        "doctrine/dbal": "Required to rename columns and drop SQLite columns (^2.6).",
+        "fzaninotto/faker": "Required to use the eloquent factory builder (^1.4).",
+        "illuminate/console": "Required to use the database commands (5.8.*).",
+        "illuminate/events": "Required to use the observers with Eloquent (5.8.*).",
+        "illuminate/filesystem": "Required to use the migrations (5.8.*).",
+        "illuminate/pagination": "Required to paginate the result set (5.8.*)."
     },
     "config": {
         "sort-packages": true
