--- a/composer.json
+++ b/composer.json
@@ -1,56 +1,87 @@
 {
-    "name": "mockery/mockery",
-    "description": "Mockery is a simple yet flexible PHP mock object framework",
-    "scripts": {
-        "docs": "phpdoc -d library -t docs/api"
-    },
-    "keywords": [
-        "bdd",
-        "library",
-        "mock",
-        "mock objects",
-        "mockery",
-        "stub",
-        "tdd",
-        "test",
-        "test double",
-        "testing"
-    ],
-    "homepage": "https://github.com/mockery/mockery",
-    "license": "BSD-3-Clause",
+    "name": "moneyphp/money",
+    "description": "PHP implementation of Fowler's Money pattern",
+    "license": "MIT",
+    "keywords": ["money", "vo", "value object"],
+    "homepage": "http://moneyphp.org",
     "authors": [
         {
-            "name": "Pádraic Brady",
-            "email": "padraic.brady@gmail.com",
-            "homepage": "http://blog.astrumfutura.com"
+            "name": "Mathias Verraes",
+            "email": "mathias@verraes.net",
+            "homepage": "http://verraes.net"
         },
         {
-            "name": "Dave Marshall",
-            "email": "dave.marshall@atstsolutions.co.uk",
-            "homepage": "http://davedevelopment.co.uk"
+            "name": "Márk Sági-Kazár",
+            "email": "mark.sagikazar@gmail.com"
+        },
+        {
+            "name": "Frederik Bosch",
+            "email": "f.bosch@genkgo.nl"
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "lib-pcre": ">=7.0",
-        "hamcrest/hamcrest-php": "~2.0"
+        "php": ">=5.6",
+        "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7.10|~6.5|~7.0|~8.0"
+        "phpunit/phpunit": "^5.7 || ^6.4 || ^7.0",
+        "symfony/phpunit-bridge": "^4",
+        "ext-bcmath": "*",
+        "ext-gmp": "*",
+        "ext-intl": "*",
+        "florianv/exchanger": "^1.0",
+        "florianv/swap": "^3.0",
+        "psr/cache": "^1.0",
+        "cache/taggable-cache": "^0.4.0",
+        "phpspec/phpspec": "^3.0",
+        "leanphp/phpspec-code-coverage": "^3.0 || ^4.0",
+        "doctrine/instantiator": "^1.0.5",
+        "moneyphp/iso-currencies": "^3.0",
+        "php-http/message": "^1.4",
+        "php-http/mock-client": "^1.0.0"
+    },
+    "suggest": {
+        "ext-bcmath": "Calculate without integer limits",
+        "ext-gmp": "Calculate without integer limits",
+        "ext-intl": "Format Money objects with intl",
+        "florianv/swap": "Exchange rates library for PHP",
+        "florianv/exchanger": "Exchange rates library for PHP",
+        "psr/cache-implementation": "Used for Currency caching"
     },
     "autoload": {
-        "psr-0": {
-            "Mockery": "library/"
+        "psr-4": {
+            "Money\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "test\\": "tests/"
+            "Tests\\Money\\": "tests/",
+            "spec\\Money\\": "spec/"
         }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "clean": "rm -rf build/ vendor/",
+        "test": [
+            "vendor/bin/phpspec run",
+            "vendor/bin/phpunit -v"
+        ],
+        "test-coverage": [
+            "vendor/bin/phpspec run -c phpspec.ci.yml",
+            "vendor/bin/phpunit -v --coverage-text --coverage-clover=build/unit_coverage.xml"
+        ],
+        "update-currencies": [
+            "cp vendor/moneyphp/iso-currencies/resources/current.php resources/currency.php",
+            "php resources/generate-money-factory.php"
+        ]
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2.x-dev"
+            "dev-master": "3.0-dev"
         }
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
