--- a/composer.json
+++ b/composer.json
@@ -1,87 +1,66 @@
 {
-    "name": "moneyphp/money",
-    "description": "PHP implementation of Fowler's Money pattern",
+    "name": "monolog/monolog",
+    "description": "Sends your logs to files, sockets, inboxes, databases and various web services",
+    "keywords": ["log", "logging", "psr-3"],
+    "homepage": "http://github.com/Seldaek/monolog",
+    "type": "library",
     "license": "MIT",
-    "keywords": ["money", "vo", "value object"],
-    "homepage": "http://moneyphp.org",
     "authors": [
         {
-            "name": "Mathias Verraes",
-            "email": "mathias@verraes.net",
-            "homepage": "http://verraes.net"
-        },
-        {
-            "name": "Márk Sági-Kazár",
-            "email": "mark.sagikazar@gmail.com"
-        },
-        {
-            "name": "Frederik Bosch",
-            "email": "f.bosch@genkgo.nl"
+            "name": "Jordi Boggiano",
+            "email": "j.boggiano@seld.be",
+            "homepage": "http://seld.be"
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "ext-json": "*"
+        "php": ">=5.3.0",
+        "psr/log": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^6.4 || ^7.0",
-        "symfony/phpunit-bridge": "^4",
-        "ext-bcmath": "*",
-        "ext-gmp": "*",
-        "ext-intl": "*",
-        "florianv/exchanger": "^1.0",
-        "florianv/swap": "^3.0",
-        "psr/cache": "^1.0",
-        "cache/taggable-cache": "^0.4.0",
-        "phpspec/phpspec": "^3.0",
-        "leanphp/phpspec-code-coverage": "^3.0 || ^4.0",
-        "doctrine/instantiator": "^1.0.5",
-        "moneyphp/iso-currencies": "^3.0",
-        "php-http/message": "^1.4",
-        "php-http/mock-client": "^1.0.0"
+        "phpunit/phpunit": "~4.5",
+        "graylog2/gelf-php": "~1.0",
+        "sentry/sentry": "^0.13",
+        "ruflin/elastica": ">=0.90 <3.0",
+        "doctrine/couchdb": "~1.0@dev",
+        "aws/aws-sdk-php": "^2.4.9 || ^3.0",
+        "php-amqplib/php-amqplib": "~2.4",
+        "swiftmailer/swiftmailer": "^5.3|^6.0",
+        "php-console/php-console": "^3.1.3",
+        "phpunit/phpunit-mock-objects": "2.3.0",
+        "jakub-onderka/php-parallel-lint": "0.9"
     },
+    "_": "phpunit/phpunit-mock-objects required in 2.3.0 due to https://github.com/sebastianbergmann/phpunit-mock-objects/issues/223 - needs hhvm 3.8+ on travis",
     "suggest": {
-        "ext-bcmath": "Calculate without integer limits",
-        "ext-gmp": "Calculate without integer limits",
-        "ext-intl": "Format Money objects with intl",
-        "florianv/swap": "Exchange rates library for PHP",
-        "florianv/exchanger": "Exchange rates library for PHP",
-        "psr/cache-implementation": "Used for Currency caching"
+        "graylog2/gelf-php": "Allow sending log messages to a GrayLog2 server",
+        "sentry/sentry": "Allow sending log messages to a Sentry server",
+        "doctrine/couchdb": "Allow sending log messages to a CouchDB server",
+        "ruflin/elastica": "Allow sending log messages to an Elastic Search server",
+        "php-amqplib/php-amqplib": "Allow sending log messages to an AMQP server using php-amqplib",
+        "ext-amqp": "Allow sending log messages to an AMQP server (1.0+ required)",
+        "ext-mongo": "Allow sending log messages to a MongoDB server",
+        "mongodb/mongodb": "Allow sending log messages to a MongoDB server via PHP Driver",
+        "aws/aws-sdk-php": "Allow sending log messages to AWS services like DynamoDB",
+        "rollbar/rollbar": "Allow sending log messages to Rollbar",
+        "php-console/php-console": "Allow sending log messages to Google Chrome"
     },
     "autoload": {
-        "psr-4": {
-            "Money\\": "src/"
-        }
+        "psr-4": {"Monolog\\": "src/Monolog"}
     },
     "autoload-dev": {
-        "psr-4": {
-            "Tests\\Money\\": "tests/",
-            "spec\\Money\\": "spec/"
-        }
+        "psr-4": {"Monolog\\": "tests/Monolog"}
     },
-    "config": {
-        "sort-packages": true
-    },
-    "scripts": {
-        "clean": "rm -rf build/ vendor/",
-        "test": [
-            "vendor/bin/phpspec run",
-            "vendor/bin/phpunit -v"
-        ],
-        "test-coverage": [
-            "vendor/bin/phpspec run -c phpspec.ci.yml",
-            "vendor/bin/phpunit -v --coverage-text --coverage-clover=build/unit_coverage.xml"
-        ],
-        "update-currencies": [
-            "cp vendor/moneyphp/iso-currencies/resources/current.php resources/currency.php",
-            "php resources/generate-money-factory.php"
-        ]
+    "provide": {
+        "psr/log-implementation": "1.0.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev"
+            "dev-master": "2.0.x-dev"
         }
     },
-    "prefer-stable": true,
-    "minimum-stability": "dev"
+    "scripts": {
+        "test": [
+            "parallel-lint . --exclude vendor --exclude src/Monolog/Handler/FormattableHandlerInterface.php  --exclude src/Monolog/Handler/FormattableHandlerTrait.php --exclude src/Monolog/Handler/ProcessableHandlerInterface.php --exclude src/Monolog/Handler/ProcessableHandlerTrait.php",
+            "phpunit"
+        ]
+    }
 }
