--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,42 @@
 {
-    "name": "paypal/rest-api-sdk-php",
-    "description": "PayPal's PHP SDK for REST APIs",
-    "keywords": ["paypal", "payments", "rest", "sdk"],
-    "type": "library",
-    "license": "Apache-2.0",
-    "homepage": "http://paypal.github.io/PayPal-PHP-SDK/",
-    "authors": [
-        {
-            "name": "PayPal",
-            "homepage": "https://github.com/paypal/rest-api-sdk-php/contributors"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.0",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "psr/log": "^1.0.0"
+  "name": "phar-io/manifest",
+  "description": "Component for reading phar.io manifest information from a PHP Archive (PHAR)",
+  "license": "BSD-3-Clause",
+  "authors": [
+    {
+      "name": "Arne Blankerts",
+      "email": "arne@blankerts.de",
+      "role": "Developer"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^4.8.35"
+    {
+      "name": "Sebastian Heuer",
+      "email": "sebastian@phpeople.de",
+      "role": "Developer"
     },
-    "autoload": {
-        "psr-0": {
-            "PayPal": "lib/"
-        }
+    {
+      "name": "Sebastian Bergmann",
+      "email": "sebastian@phpunit.de",
+      "role": "Developer"
     }
+  ],
+  "support": {
+    "issues": "https://github.com/phar-io/manifest/issues"
+  },
+  "require": {
+    "php": "^5.6 || ^7.0",
+    "ext-dom": "*",
+    "ext-phar": "*",
+    "phar-io/version": "^2.0"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  },
+  "extra": {
+    "branch-alias": {
+        "dev-master": "1.0.x-dev"
+    }
+  }
 }
+
