--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "phar-io/manifest",
-  "description": "Component for reading phar.io manifest information from a PHP Archive (PHAR)",
+  "name": "phar-io/version",
+  "description": "Library for handling version information and constraints",
   "license": "BSD-3-Clause",
   "authors": [
     {
@@ -20,23 +20,15 @@
     }
   ],
   "support": {
-    "issues": "https://github.com/phar-io/manifest/issues"
+    "issues": "https://github.com/phar-io/version/issues"
   },
   "require": {
-    "php": "^5.6 || ^7.0",
-    "ext-dom": "*",
-    "ext-phar": "*",
-    "phar-io/version": "^2.0"
+    "php": "^5.6 || ^7.0"
   },
   "autoload": {
     "classmap": [
       "src/"
     ]
-  },
-  "extra": {
-    "branch-alias": {
-        "dev-master": "1.0.x-dev"
-    }
   }
 }
 
