--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "phpunit/php-code-coverage",
-    "description": "Library that provides collection, processing, and rendering functionality for PHP code coverage information.",
+    "name": "phpunit/phpunit",
+    "description": "The PHP Unit Testing framework.",
     "type": "library",
     "keywords": [
-        "coverage",
-        "testing",
-        "xunit"
+        "phpunit",
+        "xunit",
+        "testing"
     ],
-    "homepage": "https://github.com/sebastianbergmann/php-code-coverage",
+    "homepage": "https://phpunit.de/",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -17,39 +17,74 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/sebastianbergmann/php-code-coverage/issues"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "sort-packages": true
+        "issues": "https://github.com/sebastianbergmann/phpunit/issues"
     },
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
         "ext-dom": "*",
-        "ext-xmlwriter": "*",
-        "phpunit/php-file-iterator": "^2.0",
-        "phpunit/php-token-stream": "^3.0",
+        "ext-json": "*",
+        "ext-libxml": "*",
+        "ext-mbstring": "*",
+        "ext-xml": "*",
+        "doctrine/instantiator": "^1.1",
+        "myclabs/deep-copy": "^1.7",
+        "phar-io/manifest": "^1.0.2",
+        "phar-io/version": "^2.0",
+        "phpspec/prophecy": "^1.7",
+        "phpunit/php-code-coverage": "^6.0.7",
+        "phpunit/php-file-iterator": "^2.0.1",
         "phpunit/php-text-template": "^1.2.1",
-        "sebastian/code-unit-reverse-lookup": "^1.0.1",
-        "sebastian/environment": "^3.1 || ^4.0",
-        "sebastian/version": "^2.0.1",
-        "theseer/tokenizer": "^1.1"
+        "phpunit/php-timer": "^2.1",
+        "sebastian/comparator": "^3.0",
+        "sebastian/diff": "^3.0",
+        "sebastian/environment": "^4.0",
+        "sebastian/exporter": "^3.1",
+        "sebastian/global-state": "^2.0",
+        "sebastian/object-enumerator": "^3.0.3",
+        "sebastian/resource-operations": "^2.0",
+        "sebastian/version": "^2.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "ext-PDO": "*"
+    },
+    "conflict": {
+        "phpunit/phpunit-mock-objects": "*"
+    },
+    "config": {
+        "platform": {
+            "php": "7.1.0"
+        },
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
     "suggest": {
-        "ext-xdebug": "^2.6.0"
+        "phpunit/php-invoker": "^2.0",
+        "ext-soap": "*",
+        "ext-xdebug": "*"
     },
+    "bin": [
+        "phpunit"
+    ],
     "autoload": {
         "classmap": [
             "src/"
         ]
     },
+    "autoload-dev": {
+        "classmap": [
+            "tests/"
+        ],
+        "files": [
+            "src/Framework/Assert/Functions.php",
+            "tests/_files/CoverageNamespacedFunctionTest.php",
+            "tests/_files/CoveredFunction.php",
+            "tests/_files/NamespaceCoveredFunction.php"
+        ]
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "6.1-dev"
+            "dev-master": "7.5-dev"
         }
     }
 }
