--- a/composer.json
+++ b/composer.json
@@ -1,90 +1,48 @@
 {
-    "name": "phpunit/phpunit",
-    "description": "The PHP Unit Testing framework.",
-    "type": "library",
-    "keywords": [
-        "phpunit",
-        "xunit",
-        "testing"
-    ],
-    "homepage": "https://phpunit.de/",
-    "license": "BSD-3-Clause",
-    "authors": [
-        {
-            "name": "Sebastian Bergmann",
-            "email": "sebastian@phpunit.de",
-            "role": "lead"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/sebastianbergmann/phpunit/issues"
-    },
-    "prefer-stable": true,
-    "require": {
-        "php": "^7.1",
-        "ext-dom": "*",
-        "ext-json": "*",
-        "ext-libxml": "*",
-        "ext-mbstring": "*",
-        "ext-xml": "*",
-        "doctrine/instantiator": "^1.1",
-        "myclabs/deep-copy": "^1.7",
-        "phar-io/manifest": "^1.0.2",
-        "phar-io/version": "^2.0",
-        "phpspec/prophecy": "^1.7",
-        "phpunit/php-code-coverage": "^6.0.7",
-        "phpunit/php-file-iterator": "^2.0.1",
-        "phpunit/php-text-template": "^1.2.1",
-        "phpunit/php-timer": "^2.1",
-        "sebastian/comparator": "^3.0",
-        "sebastian/diff": "^3.0",
-        "sebastian/environment": "^4.0",
-        "sebastian/exporter": "^3.1",
-        "sebastian/global-state": "^2.0",
-        "sebastian/object-enumerator": "^3.0.3",
-        "sebastian/resource-operations": "^2.0",
-        "sebastian/version": "^2.0.1"
-    },
-    "require-dev": {
-        "ext-PDO": "*"
-    },
-    "conflict": {
-        "phpunit/phpunit-mock-objects": "*"
-    },
-    "config": {
-        "platform": {
-            "php": "7.1.0"
-        },
-        "optimize-autoloader": true,
-        "sort-packages": true
-    },
-    "suggest": {
-        "phpunit/php-invoker": "^2.0",
-        "ext-soap": "*",
-        "ext-xdebug": "*"
-    },
-    "bin": [
-        "phpunit"
-    ],
-    "autoload": {
-        "classmap": [
-            "src/"
-        ]
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ],
-        "files": [
-            "src/Framework/Assert/Functions.php",
-            "tests/_files/CoverageNamespacedFunctionTest.php",
-            "tests/_files/CoveredFunction.php",
-            "tests/_files/NamespaceCoveredFunction.php"
-        ]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "7.5-dev"
-        }
+  "name": "stripe/stripe-php",
+  "description": "Stripe PHP Library",
+  "keywords": [
+    "stripe",
+    "payment processing",
+    "api"
+  ],
+  "homepage": "https://stripe.com/",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Stripe and contributors",
+      "homepage": "https://github.com/stripe/stripe-php/contributors"
     }
+  ],
+  "require": {
+    "php": ">=5.6.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-mbstring": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7",
+    "php-coveralls/php-coveralls": "^2.1",
+    "squizlabs/php_codesniffer": "^3.3",
+    "symfony/process": "~3.4",
+    "friendsofphp/php-cs-fixer": "^2.15"
+  },
+  "autoload": {
+    "psr-4": {
+      "Stripe\\": "lib/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Stripe\\": [
+        "tests/",
+        "tests/Stripe/"
+      ]
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0-dev"
+    }
+  }
 }
