--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,43 @@
 {
-  "name": "stripe/stripe-php",
-  "description": "Stripe PHP Library",
-  "keywords": [
-    "stripe",
-    "payment processing",
-    "api"
-  ],
-  "homepage": "https://stripe.com/",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Stripe and contributors",
-      "homepage": "https://github.com/stripe/stripe-php/contributors"
+    "name": "swiftmailer/swiftmailer",
+    "type": "library",
+    "description": "Swiftmailer, free feature-rich PHP mailer",
+    "keywords": ["mail","mailer","email"],
+    "homepage": "https://swiftmailer.symfony.com",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Chris Corbyn"
+        },
+        {
+            "name": "Fabien Potencier",
+            "email": "fabien@symfony.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.0.0",
+        "egulias/email-validator": "~2.0",
+        "symfony/polyfill-iconv": "^1.0",
+        "symfony/polyfill-mbstring": "^1.0",
+        "symfony/polyfill-intl-idn": "^1.10"
+    },
+    "require-dev": {
+        "mockery/mockery": "~0.9.1",
+        "symfony/phpunit-bridge": "^3.4.19|^4.1.8"
+    },
+    "suggest": {
+        "ext-intl": "Needed to support internationalized email addresses",
+        "true/punycode": "Needed to support internationalized email addresses, if ext-intl is not installed"
+    },
+    "autoload": {
+        "files": ["lib/swift_required.php"]
+    },
+    "autoload-dev": {
+        "psr-0": { "Swift_": "tests/unit" }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "6.2-dev"
+        }
     }
-  ],
-  "require": {
-    "php": ">=5.6.0",
-    "ext-curl": "*",
-    "ext-json": "*",
-    "ext-mbstring": "*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "php-coveralls/php-coveralls": "^2.1",
-    "squizlabs/php_codesniffer": "^3.3",
-    "symfony/process": "~3.4",
-    "friendsofphp/php-cs-fixer": "^2.15"
-  },
-  "autoload": {
-    "psr-4": {
-      "Stripe\\": "lib/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Stripe\\": [
-        "tests/",
-        "tests/Stripe/"
-      ]
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "2.0-dev"
-    }
-  }
 }
