--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "symfony/console",
+    "name": "symfony/mime",
     "type": "library",
-    "description": "Symfony Console Component",
-    "keywords": [],
+    "description": "A library to manipulate MIME messages",
+    "keywords": ["mime", "mime-type"],
     "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
@@ -17,35 +17,15 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "symfony/polyfill-mbstring": "~1.0",
-        "symfony/polyfill-php73": "^1.8",
-        "symfony/service-contracts": "^1.1"
+        "symfony/polyfill-intl-idn": "^1.10",
+        "symfony/polyfill-mbstring": "^1.0"
     },
     "require-dev": {
-        "symfony/config": "~3.4|~4.0",
-        "symfony/event-dispatcher": "^4.3",
-        "symfony/dependency-injection": "~3.4|~4.0",
-        "symfony/lock": "~3.4|~4.0",
-        "symfony/process": "~3.4|~4.0",
-        "symfony/var-dumper": "^4.3",
-        "psr/log": "~1.0"
-    },
-    "provide": {
-        "psr/log-implementation": "1.0"
-    },
-    "suggest": {
-        "symfony/event-dispatcher": "",
-        "symfony/lock": "",
-        "symfony/process": "",
-        "psr/log": "For using the console logger"
-    },
-    "conflict": {
-        "symfony/dependency-injection": "<3.4",
-        "symfony/event-dispatcher": "<4.3",
-        "symfony/process": "<3.3"
+        "egulias/email-validator": "^2.1.10",
+        "symfony/dependency-injection": "~3.4|^4.1"
     },
     "autoload": {
-        "psr-4": { "Symfony\\Component\\Console\\": "" },
+        "psr-4": { "Symfony\\Component\\Mime\\": "" },
         "exclude-from-classmap": [
             "/Tests/"
         ]
