--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "symfony/mime",
+    "name": "symfony/routing",
     "type": "library",
-    "description": "A library to manipulate MIME messages",
-    "keywords": ["mime", "mime-type"],
+    "description": "Symfony Routing Component",
+    "keywords": ["routing", "router", "URL", "URI"],
     "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
@@ -16,16 +16,31 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "symfony/polyfill-intl-idn": "^1.10",
-        "symfony/polyfill-mbstring": "^1.0"
+        "php": "^7.1.3"
     },
     "require-dev": {
-        "egulias/email-validator": "^2.1.10",
-        "symfony/dependency-injection": "~3.4|^4.1"
+        "symfony/config": "~4.2",
+        "symfony/http-foundation": "~3.4|~4.0",
+        "symfony/yaml": "~3.4|~4.0",
+        "symfony/expression-language": "~3.4|~4.0",
+        "symfony/dependency-injection": "~3.4|~4.0",
+        "doctrine/annotations": "~1.2",
+        "psr/log": "~1.0"
+    },
+    "conflict": {
+        "symfony/config": "<4.2",
+        "symfony/dependency-injection": "<3.4",
+        "symfony/yaml": "<3.4"
+    },
+    "suggest": {
+        "symfony/http-foundation": "For using a Symfony Request object",
+        "symfony/config": "For using the all-in-one router or any loader",
+        "symfony/yaml": "For using the YAML loader",
+        "symfony/expression-language": "For using expression matching",
+        "doctrine/annotations": "For using the annotation loader"
     },
     "autoload": {
-        "psr-4": { "Symfony\\Component\\Mime\\": "" },
+        "psr-4": { "Symfony\\Component\\Routing\\": "" },
         "exclude-from-classmap": [
             "/Tests/"
         ]
