--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,65 @@
 {
-    "name": "symfony/routing",
-    "type": "library",
-    "description": "Symfony Routing Component",
-    "keywords": ["routing", "router", "URL", "URI"],
-    "homepage": "https://symfony.com",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Fabien Potencier",
-            "email": "fabien@symfony.com"
-        },
-        {
-            "name": "Symfony Community",
-            "homepage": "https://symfony.com/contributors"
-        }
+    "name": "laravel/laravel",
+    "type": "project",
+    "description": "The Laravel Framework.",
+    "keywords": [
+        "framework",
+        "laravel"
     ],
+    "license": "MIT",
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3",
+        "fideloper/proxy": "^4.0",
+        "laravel/cashier": "^10.5",
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "^1.0",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "stripe/stripe-php": "^7.12"
     },
     "require-dev": {
-        "symfony/config": "~4.2",
-        "symfony/http-foundation": "~3.4|~4.0",
-        "symfony/yaml": "~3.4|~4.0",
-        "symfony/expression-language": "~3.4|~4.0",
-        "symfony/dependency-injection": "~3.4|~4.0",
-        "doctrine/annotations": "~1.2",
-        "psr/log": "~1.0"
+        "beyondcode/laravel-dump-server": "^1.0",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5"
     },
-    "conflict": {
-        "symfony/config": "<4.2",
-        "symfony/dependency-injection": "<3.4",
-        "symfony/yaml": "<3.4"
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
     },
-    "suggest": {
-        "symfony/http-foundation": "For using a Symfony Request object",
-        "symfony/config": "For using the all-in-one router or any loader",
-        "symfony/yaml": "For using the YAML loader",
-        "symfony/expression-language": "For using expression matching",
-        "doctrine/annotations": "For using the annotation loader"
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
     },
     "autoload": {
-        "psr-4": { "Symfony\\Component\\Routing\\": "" },
-        "exclude-from-classmap": [
-            "/Tests/"
+        "psr-4": {
+            "App\\": "app/"
+        },
+        "classmap": [
+            "database/seeds",
+            "database/factories"
         ]
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "4.3-dev"
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ]
     }
 }
